@@ -1,3 +1,8 @@
+2007-06-02  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_text.cpp: applied patch from Francois Guibert,
+	fixed bug about the "Var" thing of text fields.
+
 2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>
 
 	fixed bug #1727294 
